fix-z-index

--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -13,7 +13,7 @@
   left: 0;
   top: 0;
   transform: translateX(-101%);
-  z-index: 200;
+  z-index: 2;
 }
 
 .sidebarIsOpen {
